# Sportan

./: README.md
Sportan-backend/: AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yaml  init-letsencrypt.sh  pyproject.toml
Sportan-backend/alembic/: env.py
Sportan-backend/alembic/versions/: 2ecbac0b57a7_init_schema.py  56d1651db742_.py
Sportan-backend/app/: main.py
Sportan-backend/app/core/: auth.py  config.py  database.py  supabase.py
Sportan-backend/app/modules/ai/: models.py  router.py  schemas.py  service.py
Sportan-backend/app/modules/coaching/: models.py  router.py  schemas.py  service.py
Sportan-backend/app/modules/identity/: models.py  router.py  schemas.py  service.py
Sportan-backend/app/modules/training/: models.py  router.py  schemas.py  service.py
Sportan-backend/docs/: ai-provider.md  descritption.md  endpoints.md
Sportan-backend/openspec/: AGENTS.md  project.md
Sportan-backend/openspec/changes/archive/2025-11-30-init-backend-api/: proposal.md  tasks.md
Sportan-backend/openspec/changes/archive/2025-12-11-update-ai-provider-openai/: tasks.md  (+1 more)
Sportan-backend/openspec/specs/ai/: spec.md
Sportan-backend/openspec/specs/coaching/: spec.md
Sportan-backend/openspec/specs/identity/: spec.md
Sportan-backend/openspec/specs/training/: spec.md
Sportan-backend/scripts/: get_test_token.py  manual_athlete_tests.py  manual_coach_followups.py  manual_coach_tests.py  manual_delete_checks.py  manual_parent_tests.py  manual_seed_self.py  setup_test_coach.py  test_jwt_verification.py
Sportan-backend/tests/unit/core/: __init__.py  test_auth.py
(+84 files in other folders)
